methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^MethodsArgs:2: error: not found: value move
move(stepCount: Int, forward: Boolean){
^MethodsArgs:2: error: not found: value stepCount
move(stepCount: Int, forward: Boolean){
     ^MethodsArgs:2: error: type mismatch;
 found   : (i: Int)Unit <and> ()Unit
 required: Boolean
move(stepCount: Int, forward: Boolean){
                     ^MethodsArgs:3: error: ambiguous reference to overloaded definition,
both method forward in class MethodsArgs of type (i: Int)Unit
and  method forward in class AbstractBuggle of type ()Unit
match expected type ?
  if (forward==true){
      ^MethodsArgs:4: error: not found: value stepCount
    forward(stepCount)
            ^MethodsArgs:7: error: not found: value stepCount
    backward(stepCount)
             ^